# mqtt-kafka

./: Cargo.toml  README.md  build.rs
migrations/: 20230616041557_init.sql
src/: kafka_util.rs  main.rs  message.rs  mqtt_kafka.rs
src/db/: db.rs  mod.rs
src/tq3/: histogram.rs
tools/: run-kafka-proxy-server.sh  run-port-map.sh
