[package]
name = "mqtt-kafka"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "=1.28.2", features = ["full"] }
tokio-util = {version = "=0.7.8", features = ["full"]}
tokio-stream = { version = "=0.1.14", features = ["sync"] }
# tokio-rustls = "=0.24.1"

futures="=0.3.15"
anyhow = "=1.0.71"
bytes = "=1.1.0"

tracing = { version = "=0.1.37", features = ["max_level_trace", "release_max_level_debug"] }
tracing-subscriber = {version = "=0.3.17", features = ["local-time", "env-filter"]}
tracing-appender = "=0.2.2"
time = {version = "=0.3.21", features = ["formatting", "macros"]}

rdkafka = "=0.32.2"
chrono = "=0.4.26"
sqlx = { version = "=0.6.3", features = [ "runtime-tokio-rustls" , "sqlite", "mysql", "time"] }
prost = "=0.8.0"

serde = "^1.0.126"
serde_derive = "^1.0.126"
# serde_json = "^1.0.65"
serde_json = "=1.0.68"
lazy_static = "^1.4.0"
async-trait = "^0.1.50"
thiserror = "^1.0.26"
num_enum = "^0.5.2"
pretty_assertions = "^0.7.2"
built = { version = "=0.5.1", features = ["chrono", "git2", "semver"] }
pretty-hex = "0.2.1"

[build-dependencies]
tonic-build = "=0.5.2"
prost-build = { version = "=0.8.0" }
built = { version = "=0.5.1", features = ["chrono", "git2", "semver"] }


